@@ -1,3 +1,8 @@
+2004-03-14  Marcus Brinkmann  <marcus@gnu.org>
+
+	* storeread.c (main): Call argp_usage if store is not set at
+	ARGP_KEY_END.
+
 2003-08-17  Marcus Brinkmann  <marcus@gnu.org>
 
 	* rpctrace.c: Include <stddef.h>.
